src/output/snapshots/pctx__output__formatter__tests__snapshot_markdown_content_without_trailing_newline.snap
---
source: src/output/formatter.rs
expression: output
---
`a.txt`:
```text
no trailing newline
```
