src/output/snapshots/pctx__output__formatter__tests__snapshot_markdown_fence_grows_for_quadruple_backtick.snap
---
source: src/output/formatter.rs
expression: output
---
`doc.md`:
`````markdown
Nested:
````
inner
````
End.
`````
