src/output/snapshots/pctx__output__formatter__tests__snapshot_markdown_two_files.snap
---
source: src/output/formatter.rs
expression: output
---
`src/lib.rs`:
```rust
pub fn hello() {
    println!("hi");
}
```

`README.md`:
```markdown
# Title

Body.
```
