src/output/snapshots/pctx__output__formatter__tests__snapshot_markdown_with_tree.snap
---
source: src/output/formatter.rs
expression: output
---
## File Tree

```
README.md
src
├── lib.rs
└── main.rs
```

`src/main.rs`:
```rust
fn main() {}
```

`src/lib.rs`:
```rust
pub fn a() {}
```

`README.md`:
```markdown
# R
```
