src/output/snapshots/pctx__output__formatter__tests__snapshot_plain_two_files.snap
---
source: src/output/formatter.rs
expression: output
---
=== a.txt ===
alpha

=== b.txt ===
bravo
