src/output/snapshots/pctx__output__formatter__tests__snapshot_plain_with_tree.snap
---
source: src/output/formatter.rs
expression: output
---
=== File Tree ===
src
├── a.txt
└── b.txt

=== src/a.txt ===
alpha

=== src/b.txt ===
bravo
