src/output/snapshots/pctx__output__formatter__tests__snapshot_xml_escapes_cdata_injection.snap
---
source: src/output/formatter.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<context>
  <file path="evil.txt" language="text">
<![CDATA[
before ]]]]><![CDATA[> middle ]]]]><![CDATA[> end
]]>
  </file>
</context>
