src/output/snapshots/pctx__output__formatter__tests__snapshot_xml_escapes_path_attribute.snap
---
source: src/output/formatter.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<context>
  <file path="weird&lt;&amp;&quot;path&gt;.txt" language="text">
<![CDATA[
hi
]]>
  </file>
</context>
