src/output/snapshots/pctx__output__formatter__tests__snapshot_xml_two_files.snap
---
source: src/output/formatter.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<context>
  <file path="src/lib.rs" language="rust">
<![CDATA[
pub fn hello() {}
]]>
  </file>
  <file path="data.json" language="json">
<![CDATA[
{"k": 1}
]]>
  </file>
</context>
